iOS: Changed the way the view controllers report that the view is ready (after ViewDidLoad instead of ViewWillAppear). Added PlayerPlaylistIndexChangedMessage.
Related to issue #405.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -283,5 +283,6 @@
     <Compile Include="Presenters\PitchShiftingPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IPlayerMetadataPresenter.cs" />
     <Compile Include="Presenters\PlayerMetadataPresenter.cs" />
+    <Compile Include="Messages\PlayerPlaylistIndexChangedMessage.cs" />
   </ItemGroup>
 </Project>
