iOS: Customized UINavigationController with new look and back button functionality. iOS: Added album art to list of songs in Mobile Library Browser. iOS: Added icons and new fonts.
Related to issue #405 and issue #408.

--- a/MPfm/MPfm.iOS/Info.plist
+++ b/MPfm/MPfm.iOS/Info.plist
@@ -24,6 +24,10 @@
 		<string>Fonts/OstrichLight.ttf</string>
 		<string>Fonts/OstrichRegular.ttf</string>
 		<string>Fonts/OstrichRounded.ttf</string>
+		<string>Fonts/LeagueGothic-CondensedItalic.otf</string>
+		<string>Fonts/LeagueGothic-CondensedRegular.otf</string>
+		<string>Fonts/LeagueGothic-Italic.otf</string>
+		<string>Fonts/LeagueGothic-Regular.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
