iOS: Added custom slider based on UISlider. It will be used for changing values while the song is playing, for the song position, time shifting, etc.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Classes\Controllers\PlayerMetadataViewController.designer.cs">
       <DependentUpon>PlayerMetadataViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Controls\MPfmSlider.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
