iOS: Added placeholder controls in every page of Player view. iOS: The player is now compatible with AirPlay (needs testing though) iOS: The player is now visible on the lock screen iOS: Other additions and bug fixes

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -284,5 +284,6 @@
     <Compile Include="Presenters\Interfaces\IPlayerMetadataPresenter.cs" />
     <Compile Include="Presenters\PlayerMetadataPresenter.cs" />
     <Compile Include="Messages\PlayerPlaylistIndexChangedMessage.cs" />
+    <Compile Include="Messages\PlayerCommandMessage.cs" />
   </ItemGroup>
 </Project>
