--- a/MPfm/MPfm.Player/MPfm.Player.iOS.csproj
+++ b/MPfm/MPfm.Player/MPfm.Player.iOS.csproj
@@ -176,5 +176,6 @@
     <Compile Include="Objects\Loop.cs" />
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="Events\AudioInterruptedData.cs" />
   </ItemGroup>
 </Project>
