--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -57,6 +57,7 @@
     <MtouchArch>ARMv7</MtouchArch>
     <MtouchExtraArgs>-v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
     <CodesignProvision>5C51C790-BB21-4F44-BECA-051A853109C6</CodesignProvision>
+    <CrashReportingApiKey />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -214,6 +215,7 @@
     <Folder Include="Classes\Navigation\" />
     <Folder Include="Classes\Controllers\Base\" />
     <Folder Include="Classes\Helpers\" />
+    <Folder Include="Images\Splash\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\icon57.png" />
@@ -229,16 +231,19 @@
     <Content Include="Fonts\LeagueGothic-CondensedRegular.otf" />
     <Content Include="Fonts\LeagueGothic-Italic.otf" />
     <Content Include="Fonts\LeagueGothic-Regular.otf" />
+    <Content Include="Images\Splash\Default.png" />
+    <Content Include="Images\Splash\Default%402x.png" />
+    <Content Include="Images\Splash\Default-568h%402x.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\Default%402x.png" />
-    <BundleResource Include="Resources\Default.png" />
-    <BundleResource Include="Resources\Default-568h%402x.png" />
     <BundleResource Include="Images\effects.png" />
     <BundleResource Include="Images\Tabs\audio.png" />
     <BundleResource Include="Images\Tabs\audio%402x.png" />
     <BundleResource Include="Images\back_wide%402x.png" />
     <BundleResource Include="Images\back%402x.png" />
+    <BundleResource Include="Resources\Default.png" />
+    <BundleResource Include="Resources\Default%402x.png" />
+    <BundleResource Include="Resources\Default-568h%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.iOS.csproj">
