--- a/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
@@ -157,5 +157,6 @@
     <Compile Include="OS.cs" />
     <Compile Include="CacheStore.cs" />
     <Compile Include="ByteArrayQueue.cs" />
+    <Compile Include="Normalizer.cs" />
   </ItemGroup>
 </Project>
