iOS: WaveForm - Image cache now generating in a different thread. iOS: Several bug fixes on the WaveForm control on iOS. iOS: Added CoreGraphicsHelper (ported from MPfm.Mac).
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Classes\Controls\MPfmWaveFormView.cs" />
     <Compile Include="Classes\Helpers\DarwinHardwareHelper.cs" />
     <Compile Include="Classes\Controls\MPfmTableViewCell.cs" />
+    <Compile Include="Classes\Helpers\CoreGraphicsHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
