--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -285,5 +285,11 @@
     <Compile Include="Presenters\PlayerMetadataPresenter.cs" />
     <Compile Include="Messages\PlayerPlaylistIndexChangedMessage.cs" />
     <Compile Include="Messages\PlayerCommandMessage.cs" />
+    <Compile Include="Views\ILoopDetailsView.cs" />
+    <Compile Include="Views\IMarkerDetailsView.cs" />
+    <Compile Include="Presenters\Interfaces\ILoopDetailsPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IMarkerDetailsPresenter.cs" />
+    <Compile Include="Presenters\LoopDetailsPresenter.cs" />
+    <Compile Include="Presenters\MarkerDetailsPresenter.cs" />
   </ItemGroup>
 </Project>
