Android: Updated project after changes on iOS. Split PeakFileGenerator into different files and added an interface.
Related to issue #406.

--- a/MPfm/MPfm.Core/MPfm.Core.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.csproj
@@ -94,5 +94,6 @@
     <Compile Include="OS.cs" />
     <Compile Include="CacheStore.cs" />
     <Compile Include="ByteArrayQueue.cs" />
+    <Compile Include="Normalizer.cs" />
   </ItemGroup>
 </Project>
