--- a/MPfm/MPfm.Core/MPfm.Core.Android.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.Android.csproj
@@ -84,8 +84,6 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -101,5 +99,6 @@
     <Compile Include="OS.cs" />
     <Compile Include="CacheStore.cs" />
     <Compile Include="ByteArrayQueue.cs" />
+    <Compile Include="Normalizer.cs" />
   </ItemGroup>
 </Project>
