--- a/MPfm/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm/MPfm.Player/MPfm.Player.csproj
@@ -112,5 +112,6 @@
     <Compile Include="Objects\Loop.cs" />
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="Events\AudioInterruptedData.cs" />
   </ItemGroup>
 </Project>
