--- a/MPfm/MPfm.Sound/MPfm.Sound.Android.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.Android.csproj
@@ -83,12 +83,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Reactive, Version=1.0.10621.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="Mono.Posix" />
     <Reference Include="taglib-sharp, Version=2.0.4.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Lib\Android\taglib-sharp.dll</HintPath>
@@ -145,12 +141,17 @@
     <Compile Include="BassWrapper\Wasapi\BassWasapiEnums.cs" />
     <Compile Include="BassWrapper\Wasapi\BassWasapiStructs.cs" />
     <Compile Include="BassWrapper\Wasapi\BassWasapiCallbacks.cs" />
+    <Compile Include="PeakFiles\IPeakFileGenerator.cs" />
+    <Compile Include="PeakFiles\PeakFileCorruptedException.cs" />
+    <Compile Include="PeakFiles\PeakFileDoneData.cs" />
+    <Compile Include="PeakFiles\PeakFileFormatIncompatibleException.cs" />
+    <Compile Include="PeakFiles\PeakFileProgressData.cs" />
+    <Compile Include="PeakFiles\PeakFileStartedData.cs" />
     <Compile Include="Tags\APEMetadata.cs" />
     <Compile Include="Playlists\Playlist.cs" />
     <Compile Include="Playlists\PlaylistItem.cs" />
     <Compile Include="Playlists\PlaylistTools.cs" />
     <Compile Include="Playlists\PlaylistFileFormat.cs" />
-    <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tags\APETag.cs" />
     <Compile Include="Tags\SV7Metadata.cs" />
@@ -160,5 +161,6 @@
     <Compile Include="Tags\SV8Tag.cs" />
     <Compile Include="Tags\SV8Metadata.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
+    <Compile Include="PeakFiles\PeakFileGenerator.cs" />
   </ItemGroup>
 </Project>
