iOS: Now using IPeakGenerator instead of PeakGenerator. IPeakGenerator was missing from the iOS csproj file.
Related to issue #405.

--- a/MPfm/MPfm.Sound/MPfm.Sound.iOS.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.iOS.csproj
@@ -224,5 +224,6 @@
     <Compile Include="Tags\SV8Metadata.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
     <Compile Include="PeakFiles\PeakFileGenerator.cs" />
+    <Compile Include="PeakFiles\IPeakFileGenerator.cs" />
   </ItemGroup>
 </Project>
