iOS: PlayerViewCtrl - Now showing a bigger wave form display when changing position and holding the finder. iOS: Cleaned up the look of a *lot* of views. iOS: Changed font to Helvetica Neue in all application. iOS: Added semi-transparent button.
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Classes\Controllers\MarkerDetailsViewController.designer.cs">
       <DependentUpon>MarkerDetailsViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Controls\MPfmSemiTransparentButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
