--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -292,5 +292,8 @@
     <Compile Include="Presenters\LoopDetailsPresenter.cs" />
     <Compile Include="Presenters\MarkerDetailsPresenter.cs" />
     <Compile Include="Messages\MarkerUpdatedMessage.cs" />
+    <Compile Include="Views\IPlayerStatusView.cs" />
+    <Compile Include="Presenters\Interfaces\IPlayerStatusPresenter.cs" />
+    <Compile Include="Presenters\PlayerStatusPresenter.cs" />
   </ItemGroup>
 </Project>
