iOS: Navigation controller - Changed the way labels are positioned. iOS: Navigation controller - The Effects/Now Playing buttons are now working. MobileNavigationManager: Added methods for showing Effects/Now Playing views.
Related to issue #405 and issue #409.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -295,5 +295,6 @@
     <Compile Include="Views\IPlayerStatusView.cs" />
     <Compile Include="Presenters\Interfaces\IPlayerStatusPresenter.cs" />
     <Compile Include="Presenters\PlayerStatusPresenter.cs" />
+    <Compile Include="Messages\MobileNavigationManagerCommandMessage&#x5;.cs" />
   </ItemGroup>
 </Project>
