--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -295,6 +295,6 @@
     <Compile Include="Views\IPlayerStatusView.cs" />
     <Compile Include="Presenters\Interfaces\IPlayerStatusPresenter.cs" />
     <Compile Include="Presenters\PlayerStatusPresenter.cs" />
-    <Compile Include="Messages\MobileNavigationManagerCommandMessage&#x5;.cs" />
+    <Compile Include="Messages\MobileNavigationManagerCommandMessage.cs" />
   </ItemGroup>
 </Project>
