iOS: Added GlobalTheme to store theme colors and re-use them throughout the app. iOS: Started updating the app with flat UI design.
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Classes\Managers\Events\GeneratePeakFileEventArgs.cs" />
     <Compile Include="Classes\Managers\WaveFormCacheManager.cs" />
     <Compile Include="Classes\Managers\Events\GenerateWaveFormEventArgs.cs" />
+    <Compile Include="Classes\Controls\MPfmTabBarController.cs" />
+    <Compile Include="Classes\Objects\GlobalTheme.cs" />
+    <Compile Include="Classes\Controls\MPfmTabBar.cs" />
+    <Compile Include="Classes\Controls\MPfmNavigationBar.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
